WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.h

#define LC_PROP_CMD_INT6         5126  // RW int; user value
#define LC_PROP_CMD_INT7         5127  // RW int; user value
#define LC_PROP_CMD_INT8         5128  // RW int; user value
#define LC_PROP_CMD_INT9         5129  // RW int; user value
#define LC_PROP_CMD_FLOAT0       5130  // RW float; user value
#define LC_PROP_CMD_FLOAT1       5131  // RW float; user value
#define LC_PROP_CMD_FLOAT2       5132  // RW float; user value
#define LC_PROP_CMD_FLOAT3       5133  // RW float; user value
#define LC_PROP_CMD_FLOAT4       5134  // RW float; user value
#define LC_PROP_CMD_FLOAT5       5135  // RW float; user value
#define LC_PROP_CMD_FLOAT6       5136  // RW float; user value
#define LC_PROP_CMD_FLOAT7       5137  // RW float; user value
#define LC_PROP_CMD_FLOAT8       5138  // RW float; user value
#define LC_PROP_CMD_FLOAT9       5139  // RW float; user value
#define LC_PROP_CMD_HAND0        5140  // RW handle; user value
#define LC_PROP_CMD_HAND1        5141  // RW handle; user value
#define LC_PROP_CMD_HAND2        5142  // RW handle; user value
#define LC_PROP_CMD_HAND3        5143  // RW handle; user value
#define LC_PROP_CMD_HAND4        5144  // RW handle; user value
#define LC_PROP_CMD_HAND5        5145  // RW handle; user value
#define LC_PROP_CMD_HAND6        5146  // RW handle; user value
#define LC_PROP_CMD_HAND7        5147  // RW handle; user value
#define LC_PROP_CMD_HAND8        5148  // RW handle; user value
#define LC_PROP_CMD_HAND9        5149  // RW handle; user value
#define LC_PROP_CMD_STR          5150  // RW string; user value
#define LC_CMD_INSERT_BLOCK      5301  // RW handle; Handle to the block to be inserted by LC_CMD_INSERT
#define LC_CMD_INSERT_X          5302  // RW float; Position X
#define LC_CMD_INSERT_Y          5303  // RW float; Position Y
#define LC_CMD_INSERT_SCALE      5304  // RW float; Scale
#define LC_CMD_INSERT_ANGLE      5305  // RW float; Rotation angle
#define LC_CMD_INSERT_ONS_XY     5306  // RW bool; Specify position on-screen
#define LC_CMD_INSERT_ONS_SCALE  5307  // RW bool; Specify scale on-screen
#define LC_CMD_INSERT_ONS_ANGLE  5308  // RW bool; Specify rotation angle on-screen
#define LC_CMD_INSERT_BLKREF     5309  // R  handle; Handle to inserted object (block reference) after LC_CMD_INSERT execution
#define LC_PROP_CMDWND_ENABLE    9001    // RW bool; Command window is enabled
#define LC_PROP_PROPWND_ENABLE   9002    // RW bool; Properties window is enabled
#define LC_PROP_PROPWND_DIVCOEF  9003    // RW float; ratio of the name/value columns widths
// for event "EntModified"
#define LC_MOD_ENT_PROP          1   //   
#define LC_MOD_ENT_SET           2   //   
#define LC_MOD_PLINE_ADDVER      4
#define LC_MOD_PLINE_INSVER      5
#define LC_MOD_PLINE_DELVER      6
#define LC_MOD_PLINE_REVERSE     7
#define LC_MOD_RPLAN_ADDVER      10
#define LC_MOD_RPLAN_INSVER      11
#define LC_MOD_RPLAN_DELVER      12
#define LC_MOD_MLINE_ADDVER      14
#define LC_MOD_MLINE_INSVER      15
#define LC_MOD_MLINE_DELVER      16
#define LC_MOD_MLINE_REVERSE     17
#define LC_MOD_ENT_MOVE          20  //  
#define LC_MOD_ENT_ROTATE        21  //  
#define LC_MOD_ENT_SCALE         22  //  
#define LC_MOD_ENT_MIRROR        23  //  
#define LC_MOD_ENT_JOIN          24
// for event "ObjModified"
#define LC_MOD_OBJ_PROP          31
#define LC_MOD_BLOCK_PURGE       32   // 0,1,2,3
#define LC_MOD_BLOCK_ADDENT      33
#define LC_MOD_DRW_PROP          51
// Initialization
BOOL    LCAPI lcInitialize    ();
BOOL    LCAPI lcUninitialize  (BOOL bSaveConfig);
HANDLE  LCAPI lcAddFontRes    (HANDLE hModule, int idResource, LPCWSTR szFontName);
HANDLE  LCAPI lcAddFontFile   (LPCWSTR szFilename, LPCWSTR szFontName);
HANDLE  LCAPI lcAddFontBin    (HANDLE hData, LPCWSTR szFontName);
// GUI strings
BOOL    LCAPI lcStrAdd        (LPCWSTR szTag, LPCWSTR szText);
 
BOOL    LCAPI lcStrSet        (LPCWSTR szTag, LPCWSTR szText);
LPCWSTR LCAPI lcStrGet        (LPCWSTR szTag);
                   
BOOL    LCAPI lcStrFileLoad   (LPCWSTR szFileName);
BOOL    LCAPI lcStrFileSave   (LPCWSTR szFileName, LPCWSTR szLanguage, BOOL bInit);
// Objects properties
BOOL    LCAPI lcPropGetBool   (HANDLE hObject, int idProp);
int     LCAPI lcPropGetInt    (HANDLE hObject, int idProp);
double  LCAPI lcPropGetFloat  (HANDLE hObject, int idProp);
LPCWSTR LCAPI lcPropGetStr    (HANDLE hObject, int idProp);
int     LCAPI lcPropGetStrA   (HANDLE hObject, int idProp, char* szBuf, int BufSize);
HANDLE  LCAPI lcPropGetHandle (HANDLE hObject, int idProp);
BOOL    LCAPI lcPropPutBool   (HANDLE hObject, int idProp, BOOL bValue);
BOOL    LCAPI lcPropPutInt    (HANDLE hObject, int idProp, int Value);
BOOL    LCAPI lcPropPutFloat  (HANDLE hObject, int idProp, double Value);
BOOL    LCAPI lcPropPutStr    (HANDLE hObject, int idProp, LPCWSTR szValue);
BOOL    LCAPI lcPropPutHandle (HANDLE hObject, int idProp, HANDLE hValue);
// Drawing 
HANDLE LCAPI lcCreateDrawing      ();
BOOL   LCAPI lcDeleteDrawing      (HANDLE hDrw);
BOOL   LCAPI lcDrwNew             (HANDLE hDrw, LPCWSTR szFileName, HANDLE hLcWnd);
BOOL   LCAPI lcDrwNewT            (HANDLE hDrw, LPCWSTR szFileName, LPCWSTR szTemplate, HANDLE hLcWnd);
BOOL   LCAPI lcDrwLoad            (HANDLE hDrw, LPCWSTR szFileName, HWND hWnd, HANDLE hLcWnd);
BOOL   LCAPI lcDrwLoadMem         (HANDLE hDrw, HANDLE hMem, HANDLE hLcWnd);
BOOL   LCAPI lcDrwInsert          (HANDLE hDrw, LPCWSTR szFileName, int Overwrite, HWND hWnd);
BOOL   LCAPI lcDrwSave            (HANDLE hDrw, LPCWSTR szFileName, BOOL bBak, HWND hWnd);
 
int    LCAPI lcDrwSaveMem         (HANDLE hDrw, HANDLE hMem, int MemSize);
 
BOOL   LCAPI lcDrwSaveExploded    (HANDLE hDrw, LPCWSTR szFileName, BOOL bBak, HWND hWnd);
 
BOOL   LCAPI lcDrwPurge           (HANDLE hDrw);
 
BOOL   LCAPI lcDrwRegenViews      (HANDLE hDrw, HANDLE hEnt);
BOOL   LCAPI lcDrwSortObjects     (HANDLE hDrw, int ObjType);
BOOL   LCAPI lcDrwClearXData      (HANDLE hDrw, int ObjType, int Mode);
BOOL   LCAPI lcDrwResolveBlocks   (HANDLE hDrw, WCHAR* szError);  // undoc
HANDLE LCAPI lcDrwAddLayer        (HANDLE hDrw, LPCWSTR szName, LPCWSTR szColor, HANDLE hLtype, int Lweight);
HANDLE LCAPI lcDrwAddLinetype     (HANDLE hDrw, LPCWSTR szName, LPCWSTR szDefinition);
HANDLE LCAPI lcDrwAddLinetypeF    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, LPCWSTR szLtypeName);
HANDLE LCAPI lcDrwAddTextStyle    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFontName);
HANDLE LCAPI lcDrwAddDimStyle     (HANDLE hDrw, LPCWSTR szName);
HANDLE LCAPI lcDrwAddMlineStyle   (HANDLE hDrw, LPCWSTR szName);
HANDLE LCAPI lcDrwAddImage        (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName);
HANDLE LCAPI lcDrwAddImage2       (HANDLE hDrw, LPCWSTR szName, int Width, int Height, int nBits);
HANDLE LCAPI lcDrwAddBlock        (HANDLE hDrw, LPCWSTR szName, double X, double Y);
HANDLE LCAPI lcDrwAddBlockFromFile (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, int Overwrite, HWND hwParent);
 
HANDLE LCAPI lcDrwAddBlockFromDrw (HANDLE hDrw, LPCWSTR szName, HANDLE hDrw2, int Overwrite, HWND hwParent);
HANDLE LCAPI lcDrwAddBlockFile    (HANDLE hDrw, LPCWSTR szName, LPCWSTR szFileName, int Overwrite, HWND hwParent);
HANDLE LCAPI lcDrwAddViewPaper    (HANDLE hDrw, LPCWSTR szName, int PaperSize, int Orient, double Width, double Height);
BOOL   LCAPI lcDrwDeleteObject    (HANDLE hDrw, HANDLE hObject);
HANDLE LCAPI lcDrwGetFirstObject  (HANDLE hDrw, int ObjType);
HANDLE LCAPI lcDrwGetNextObject   (HANDLE hDrw, HANDLE hObject);
HANDLE LCAPI lcDrwGetObjectByID   (HANDLE hDrw, int ObjType, int Id);
HANDLE LCAPI lcDrwGetObjectByIDH  (HANDLE hDrw, int ObjType, LPCWSTR szId);
HANDLE LCAPI lcDrwGetObjectByName (HANDLE hDrw, int ObjType, LPCWSTR szName);
int    LCAPI lcDrwCountObjects    (HANDLE hDrw, int ObjType);
HANDLE LCAPI lcDrwGetViewByBlock  (HANDLE hDrw, HANDLE hBlock);
HANDLE LCAPI lcDrwGetEntByID      (HANDLE hDrw, int Id);