WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.vb

  Public Const LC_PROP_CMD_INT6 = 5126
  Public Const LC_PROP_CMD_INT7 = 5127
  Public Const LC_PROP_CMD_INT8 = 5128
  Public Const LC_PROP_CMD_INT9 = 5129
  Public Const LC_PROP_CMD_FLOAT0 = 5130
  Public Const LC_PROP_CMD_FLOAT1 = 5131
  Public Const LC_PROP_CMD_FLOAT2 = 5132
  Public Const LC_PROP_CMD_FLOAT3 = 5133
  Public Const LC_PROP_CMD_FLOAT4 = 5134
  Public Const LC_PROP_CMD_FLOAT5 = 5135
  Public Const LC_PROP_CMD_FLOAT6 = 5136
  Public Const LC_PROP_CMD_FLOAT7 = 5137
  Public Const LC_PROP_CMD_FLOAT8 = 5138
  Public Const LC_PROP_CMD_FLOAT9 = 5139
  Public Const LC_PROP_CMD_HAND0 = 5140
  Public Const LC_PROP_CMD_HAND1 = 5141
  Public Const LC_PROP_CMD_HAND2 = 5142
  Public Const LC_PROP_CMD_HAND3 = 5143
  Public Const LC_PROP_CMD_HAND4 = 5144
  Public Const LC_PROP_CMD_HAND5 = 5145
  Public Const LC_PROP_CMD_HAND6 = 5146
  Public Const LC_PROP_CMD_HAND7 = 5147
  Public Const LC_PROP_CMD_HAND8 = 5148
  Public Const LC_PROP_CMD_HAND9 = 5149
  Public Const LC_PROP_CMD_STR = 5150
  Public Const LC_CMD_INSERT_BLOCK = 5301
  Public Const LC_CMD_INSERT_X = 5302
  Public Const LC_CMD_INSERT_Y = 5303
  Public Const LC_CMD_INSERT_SCALE = 5304
  Public Const LC_CMD_INSERT_ANGLE = 5305
  Public Const LC_CMD_INSERT_ONS_XY = 5306
  Public Const LC_CMD_INSERT_ONS_SCALE = 5307
  Public Const LC_CMD_INSERT_ONS_ANGLE = 5308
  Public Const LC_CMD_INSERT_BLKREF = 5309
  Public Const LC_PROP_CMDWND_ENABLE = 9001
  Public Const LC_PROP_PROPWND_ENABLE = 9002
  Public Const LC_PROP_PROPWND_DIVCOEF = 9003
  Public Const LC_MOD_ENT_PROP = 1
  Public Const LC_MOD_ENT_SET = 2
  Public Const LC_MOD_PLINE_ADDVER = 4
  Public Const LC_MOD_PLINE_INSVER = 5
  Public Const LC_MOD_PLINE_DELVER = 6
  Public Const LC_MOD_PLINE_REVERSE = 7
  Public Const LC_MOD_RPLAN_ADDVER = 10
  Public Const LC_MOD_RPLAN_INSVER = 11
  Public Const LC_MOD_RPLAN_DELVER = 12
  Public Const LC_MOD_MLINE_ADDVER = 14
  Public Const LC_MOD_MLINE_INSVER = 15
  Public Const LC_MOD_MLINE_DELVER = 16
  Public Const LC_MOD_MLINE_REVERSE = 17
  Public Const LC_MOD_ENT_MOVE = 20
  Public Const LC_MOD_ENT_ROTATE = 21
  Public Const LC_MOD_ENT_SCALE = 22
  Public Const LC_MOD_ENT_MIRROR = 23
  Public Const LC_MOD_ENT_JOIN = 24
  Public Const LC_MOD_OBJ_PROP = 31
  Public Const LC_MOD_BLOCK_PURGE = 32
  Public Const LC_MOD_BLOCK_ADDENT = 33
  Public Const LC_MOD_DRW_PROP = 51

  Public Declare Function Initialize Lib "Litecad.dll" Alias "lcInitialize" () As Integer

  Public Declare Function Uninitialize Lib "Litecad.dll" Alias "lcUninitialize" (ByVal bSaveConfig As Integer) As Integer

  Public Declare Unicode Function AddFontRes Lib "Litecad.dll" Alias "lcAddFontRes" (ByVal hModule As Integer, ByVal idResource As Integer, ByVal szFontName As String) As Integer

  Public Declare Unicode Function AddFontFile Lib "Litecad.dll" Alias "lcAddFontFile" (ByVal szFilename As String, ByVal szFontName As String) As Integer

  Public Declare Unicode Function AddFontBin Lib "Litecad.dll" Alias "lcAddFontBin" (ByVal hData As Integer, ByVal szFontName As String) As Integer

  Public Declare Unicode Function StrAdd Lib "Litecad.dll" Alias "lcStrAdd" (ByVal szTag As String, ByVal szText As String) As Integer

  Public Declare Unicode Function StrSet Lib "Litecad.dll" Alias "lcStrSet" (ByVal szTag As String, ByVal szText As String) As Integer

  Public Declare Unicode Function StrGet Lib "Litecad.dll" Alias "lcStrGet" (ByVal szTag As String) As String

  Public Declare Unicode Function StrFileLoad Lib "Litecad.dll" Alias "lcStrFileLoad" (ByVal szFileName As String) As Integer

  Public Declare Unicode Function StrFileSave Lib "Litecad.dll" Alias "lcStrFileSave" (ByVal szFileName As String, ByVal szLanguage As String, ByVal bInit As Integer) As Integer

  Public Declare Function PropGetBool Lib "Litecad.dll" Alias "lcPropGetBool" (ByVal hObject As Integer, ByVal idProp As Integer) As Integer

  Public Declare Function PropGetInt Lib "Litecad.dll" Alias "lcPropGetInt" (ByVal hObject As Integer, ByVal idProp As Integer) As Integer

  Public Declare Function PropGetFloat Lib "Litecad.dll" Alias "lcPropGetFloat" (ByVal hObject As Integer, ByVal idProp As Integer) As Double

  Public Declare Unicode Function PropGetStr Lib "Litecad.dll" Alias "lcPropGetStr" (ByVal hObject As Integer, ByVal idProp As Integer) As String

  Public Declare Function PropGetStrA Lib "Litecad.dll" Alias "lcPropGetStrA" (ByVal hObject As Integer, ByVal idProp As Integer, ByVal szBuf As Integer, ByVal BufSize As Integer) As Integer

  Public Declare Function PropGetHandle Lib "Litecad.dll" Alias "lcPropGetHandle" (ByVal hObject As Integer, ByVal idProp As Integer) As Integer

  Public Declare Function PropPutBool Lib "Litecad.dll" Alias "lcPropPutBool" (ByVal hObject As Integer, ByVal idProp As Integer, ByVal bValue As Integer) As Integer

  Public Declare Function PropPutInt Lib "Litecad.dll" Alias "lcPropPutInt" (ByVal hObject As Integer, ByVal idProp As Integer, ByVal Value As Integer) As Integer

  Public Declare Function PropPutFloat Lib "Litecad.dll" Alias "lcPropPutFloat" (ByVal hObject As Integer, ByVal idProp As Integer, ByVal Value As Double) As Integer

  Public Declare Unicode Function PropPutStr Lib "Litecad.dll" Alias "lcPropPutStr" (ByVal hObject As Integer, ByVal idProp As Integer, ByVal szValue As String) As Integer

  Public Declare Function PropPutHandle Lib "Litecad.dll" Alias "lcPropPutHandle" (ByVal hObject As Integer, ByVal idProp As Integer, ByVal hValue As Integer) As Integer

  Public Declare Function CreateDrawing Lib "Litecad.dll" Alias "lcCreateDrawing" () As Integer

  Public Declare Function DeleteDrawing Lib "Litecad.dll" Alias "lcDeleteDrawing" (ByVal hDrw As Integer) As Integer

  Public Declare Unicode Function DrwNew Lib "Litecad.dll" Alias "lcDrwNew" (ByVal hDrw As Integer, ByVal szFileName As String, ByVal hLcWnd As Integer) As Integer

  Public Declare Unicode Function DrwNewT Lib "Litecad.dll" Alias "lcDrwNewT" (ByVal hDrw As Integer, ByVal szFileName As String, ByVal szTemplate As String, ByVal hLcWnd As Integer) As Integer

  Public Declare Unicode Function DrwLoad Lib "Litecad.dll" Alias "lcDrwLoad" (ByVal hDrw As Integer, ByVal szFileName As String, ByVal hWnd As Integer, ByVal hLcWnd As Integer) As Integer

  Public Declare Function DrwLoadMem Lib "Litecad.dll" Alias "lcDrwLoadMem" (ByVal hDrw As Integer, ByVal hMem As Integer, ByVal hLcWnd As Integer) As Integer

  Public Declare Unicode Function DrwInsert Lib "Litecad.dll" Alias "lcDrwInsert" (ByVal hDrw As Integer, ByVal szFileName As String, ByVal Overwrite As Integer, ByVal hWnd As Integer) As Integer

  Public Declare Unicode Function DrwSave Lib "Litecad.dll" Alias "lcDrwSave" (ByVal hDrw As Integer, ByVal szFileName As String, ByVal bBak As Integer, ByVal hWnd As Integer) As Integer

  Public Declare Function DrwSaveMem Lib "Litecad.dll" Alias "lcDrwSaveMem" (ByVal hDrw As Integer, ByVal hMem As Integer, ByVal MemSize As Integer) As Integer

  Public Declare Unicode Function DrwSaveExploded Lib "Litecad.dll" Alias "lcDrwSaveExploded" (ByVal hDrw As Integer, ByVal szFileName As String, ByVal bBak As Integer, ByVal hWnd As Integer) As Integer

  Public Declare Function DrwPurge Lib "Litecad.dll" Alias "lcDrwPurge" (ByVal hDrw As Integer) As Integer

  Public Declare Function DrwRegenViews Lib "Litecad.dll" Alias "lcDrwRegenViews" (ByVal hDrw As Integer, ByVal hEnt As Integer) As Integer

  Public Declare Function DrwSortObjects Lib "Litecad.dll" Alias "lcDrwSortObjects" (ByVal hDrw As Integer, ByVal ObjType As Integer) As Integer

  Public Declare Function DrwClearXData Lib "Litecad.dll" Alias "lcDrwClearXData" (ByVal hDrw As Integer, ByVal ObjType As Integer, ByVal Mode As Integer) As Integer

  Public Declare Function DrwResolveBlocks Lib "Litecad.dll" Alias "lcDrwResolveBlocks" (ByVal hDrw As Integer, ByVal szError As Integer) As Integer

  Public Declare Unicode Function DrwAddLayer Lib "Litecad.dll" Alias "lcDrwAddLayer" (ByVal hDrw As Integer, ByVal szName As String, ByVal szColor As String, ByVal hLtype As Integer, ByVal Lweight As Integer) As Integer

  Public Declare Unicode Function DrwAddLinetype Lib "Litecad.dll" Alias "lcDrwAddLinetype" (ByVal hDrw As Integer, ByVal szName As String, ByVal szDefinition As String) As Integer

  Public Declare Unicode Function DrwAddLinetypeF Lib "Litecad.dll" Alias "lcDrwAddLinetypeF" (ByVal hDrw As Integer, ByVal szName As String, ByVal szFileName As String, ByVal szLtypeName As String) As Integer

  Public Declare Unicode Function DrwAddTextStyle Lib "Litecad.dll" Alias "lcDrwAddTextStyle" (ByVal hDrw As Integer, ByVal szName As String, ByVal szFontName As String) As Integer

  Public Declare Unicode Function DrwAddDimStyle Lib "Litecad.dll" Alias "lcDrwAddDimStyle" (ByVal hDrw As Integer, ByVal szName As String) As Integer

  Public Declare Unicode Function DrwAddMlineStyle Lib "Litecad.dll" Alias "lcDrwAddMlineStyle" (ByVal hDrw As Integer, ByVal szName As String) As Integer

  Public Declare Unicode Function DrwAddImage Lib "Litecad.dll" Alias "lcDrwAddImage" (ByVal hDrw As Integer, ByVal szName As String, ByVal szFileName As String) As Integer

  Public Declare Unicode Function DrwAddImage2 Lib "Litecad.dll" Alias "lcDrwAddImage2" (ByVal hDrw As Integer, ByVal szName As String, ByVal Width As Integer, ByVal Height As Integer, ByVal nBits As Integer) As Integer

  Public Declare Unicode Function DrwAddBlock Lib "Litecad.dll" Alias "lcDrwAddBlock" (ByVal hDrw As Integer, ByVal szName As String, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Unicode Function DrwAddBlockFromFile Lib "Litecad.dll" Alias "lcDrwAddBlockFromFile" (ByVal hDrw As Integer, ByVal szName As String, ByVal szFileName As String, ByVal Overwrite As Integer, ByVal hwParent As Integer) As Integer

  Public Declare Unicode Function DrwAddBlockFromDrw Lib "Litecad.dll" Alias "lcDrwAddBlockFromDrw" (ByVal hDrw As Integer, ByVal szName As String, ByVal hDrw2 As Integer, ByVal Overwrite As Integer, ByVal hwParent As Integer) As Integer

  Public Declare Unicode Function DrwAddBlockFile Lib "Litecad.dll" Alias "lcDrwAddBlockFile" (ByVal hDrw As Integer, ByVal szName As String, ByVal szFileName As String, ByVal Overwrite As Integer, ByVal hwParent As Integer) As Integer

  Public Declare Unicode Function DrwAddViewPaper Lib "Litecad.dll" Alias "lcDrwAddViewPaper" (ByVal hDrw As Integer, ByVal szName As String, ByVal PaperSize As Integer, ByVal Orient As Integer, ByVal Width As Double, ByVal Height As Double) As Integer

  Public Declare Function DrwDeleteObject Lib "Litecad.dll" Alias "lcDrwDeleteObject" (ByVal hDrw As Integer, ByVal hObject As Integer) As Integer

  Public Declare Function DrwGetFirstObject Lib "Litecad.dll" Alias "lcDrwGetFirstObject" (ByVal hDrw As Integer, ByVal ObjType As Integer) As Integer

  Public Declare Function DrwGetNextObject Lib "Litecad.dll" Alias "lcDrwGetNextObject" (ByVal hDrw As Integer, ByVal hObject As Integer) As Integer

  Public Declare Function DrwGetObjectByID Lib "Litecad.dll" Alias "lcDrwGetObjectByID" (ByVal hDrw As Integer, ByVal ObjType As Integer, ByVal Id As Integer) As Integer

  Public Declare Unicode Function DrwGetObjectByIDH Lib "Litecad.dll" Alias "lcDrwGetObjectByIDH" (ByVal hDrw As Integer, ByVal ObjType As Integer, ByVal szId As String) As Integer

  Public Declare Unicode Function DrwGetObjectByName Lib "Litecad.dll" Alias "lcDrwGetObjectByName" (ByVal hDrw As Integer, ByVal ObjType As Integer, ByVal szName As String) As Integer

  Public Declare Function DrwCountObjects Lib "Litecad.dll" Alias "lcDrwCountObjects" (ByVal hDrw As Integer, ByVal ObjType As Integer) As Integer

  Public Declare Function DrwGetViewByBlock Lib "Litecad.dll" Alias "lcDrwGetViewByBlock" (ByVal hDrw As Integer, ByVal hBlock As Integer) As Integer

  Public Declare Function DrwGetEntByID Lib "Litecad.dll" Alias "lcDrwGetEntByID" (ByVal hDrw As Integer, ByVal Id As Integer) As Integer
